project/manifests/client.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-client-dep
  namespace: dwk-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-client
  template:
    metadata:
      labels:
        app: project-client
    spec:
      containers:
        - name: project-client
          image: joonashak/dwk-project-client
