project/manifests/server.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-server-dep
  namespace: dwk-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-server
  template:
    metadata:
      labels:
        app: project-server
    spec:
      volumes:
        - name: pv
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: project-server
          image: joonashak/dwk-project-server
          volumeMounts:
          - name: pv
            mountPath: /app/assets
