project/manifests/client.service.yml
apiVersion: v1
kind: Service
metadata:
  name: project-client-svc
spec:
  type: ClusterIP
  selector:
    app: project-client
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 80
